ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-domains
  namespace: example-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - domain.one.com
    secretName: letsencrypt-certificate-one
  - hosts:
    - domain.two.com
    secretName: letsencrypt-certificate-two
  rules:
  - host: domain.one.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: domain-one-service
            port:
              number: 3535
  - host: domain.two.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: domain-two-service
            port:
              number: 3535
